each checkbox clicked is showing up in console

--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
   </div>
 
 <script>
+  const checkboxes = document.querySelectorAll('.inbox input[type = "checkbox"]');
+  console.log(checkboxes);
+
+  function handleCheck(e) {
+    console.log(e);
+  }
+
+  // take checkboxes and loop over each one
+  // note that click event will be triggered from anything from keyboard
+  checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 </script>
 </body>
 </html>
