works as intended- when holding shift key, boxes between first checked and last checked will auto check as well

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
           inBetween = !inBetween;
           console.log('starting to check them inBetween');
         }
+
+        if(inBetween) {
+          checkbox.checked = true;
+        }
       })
     }
     console.log(e);
